<resources>
    <string name="app_name">Floatout</string>

    <string name="hint_enter_username">Username</string>

    <string name="hint_enter_email">Enter your email</string>

    <string name="hint_enter_password">Enter password</string>

    <string name="title_activity_create_account">Create Account</string>

    <string name="text_already_have_account">Already have an account?</string>

    <string name="button_sign_in">Sign In</string>

    <string name="no_account_text">No account?</string>

    <string name="button_create_account">Create Account</string>
    <string name="title_activity_login">Login</string>

    <string name="error_cannot_be_empty">Cannot be empty</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_password_short">Password length should be greater than six characters</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
